# AnsimOn-AI

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: ci.yml
data/evalsets/v0/: eval_full_v0.json  eval_smoke_v0.json
scripts/: run_eval_v0.py
src/ansimon_ai/caching/: caching.py  db.py  models.py  s3.py
src/ansimon_ai/eval/: runner_v0.py
src/ansimon_ai/llm/: base.py  mock.py
src/ansimon_ai/ocr/: clova_ocr.py  from_ocr.py  (+3 more)
src/schemas/: complaint_timeline.py  complaint_writing.py  timeline_inputs.py
tests/ocr/: test_clova_ocr.py  test_ocr.py  test_table_formatting.py
tests/pdf/: test_extract_image_pdf_tables.py  test_extract_text_auto.py  test_extract_text_docx.py
tests/prompting/: test_build_messages.py
tests/requirements/: test_event_io_v0.py  test_requirement_state_v0.py
tests/structuring/: _mocks.py  test_anchor_ambiguous.py  test_anchor_success.py  test_anchor_unmatched.py  test_cache.py  test_call_structuring.py  test_from_stt.py  test_timestamp_utils.py
tests/stt/: test_diarization.py  test_pyannote_diarization.py  test_whisper_diarizer_config.py  test_whisper_stt_tags.py
tests/timeline/: test_prototype.py
tests/trial/: test_signals_v0.py
tests/validator/: test_confidence_and_evidence.py  test_required_common_fields.py  test_required_top_level_keys.py  test_schema_exists.py  test_tag_validator_v0.py
tests/video/: test_extract_frames.py
tests/writing/: test_build_input.py  test_generate.py  test_manual_item_build_input.py
(+46 files in other folders)
