[project]
name = "ansimon-ai"
version = "0.1.0"
description = "AnsimOn AI core logic"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"