[project]
name = "ansimon-ai"
version = "0.1.0"
description = "AnsimOn AI core logic"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0.0",
    "python-docx>=1.1.0",
    "pytesseract==0.3.13",
    "Pillow==12.1.1",
    "pdfplumber==0.11.9",
    "pdf2image==1.17.0",
    "openai-whisper==20250625",
    # Caching dependencies
    "boto3 (>=1.42.70,<2.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"